clusters/ocelot.archifleks.xyz/seed/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: seed
spec:
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr:3.0.10 # {"$imagepolicy": "seed:sonarr"}
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /seed
          name: seed
        - mountPath: /config
          name: config
        ports:
        - name: http
          containerPort: 8989
      securityContext:
        fsGroup: 1000
      volumes:
      - name: seed
        hostPath:
          # directory location on host
          path: /srv/hostpaths/seed
          # this field is optional
          type: DirectoryOrCreate
      - name: config
        hostPath:
          # directory location on host
          path: /srv/hostpaths/sonarr
          # this field is optional
          type: DirectoryOrCreate
