clusters/ocelot.archifleks.xyz/seed/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: seed
  name: sonarr
spec:
  ports:
    - port: 8989
  selector:
    app: sonarr
  type: ClusterIP
