clusters/ocelot.archifleks.xyz/seed/sonarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: seed
  name: sonarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600s"
spec:
  ingressClassName: nginx
  rules:
    - host: sonarr.archifleks.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
  tls:
  - hosts:
    - sonarr.archifleks.xyz
    secretName: sonarr.archifleks.xyz
